maps working all dandy

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
+  <%= yield :head %> 
 </head>
 <body>
   <p class="notice"><%= notice %></p>
@@ -12,5 +13,8 @@
 
 <%= yield %>
 
+	<footer>
+		<%= yield :scripts %>
+	</footer>
 </body>
 </html>
