--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -45,6 +45,11 @@
   <%= @restaurant.chain_id %>
 </p>
 
+<div>Mapple
+	<%= gmaps4rails(@json_map) %>
+	
+</div>
+
 <div id="disqus_thread"></div>
 <script type="text/javascript">
 var disqus_developer = 1; // this would set it to developer mode
