--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -30,8 +30,8 @@
     <td><%= restaurant.name %></td>
     <td><%= restaurant.address %></td>
     <td><%= restaurant.contact_details %></td>
-    <td><%= restaurant.lng %></td>
-    <td><%= restaurant.lat %></td>
+    <td><%= restaurant.longitude %></td>
+    <td><%= restaurant.latitude %></td>
     <td><%= restaurant.tips %></td>
     <td><%= restaurant.moderated %></td>
     <td><%= restaurant.correspondence %></td>
@@ -42,6 +42,11 @@
   </tr>
 <% end %>
 </table>
+
+<div style="width: 400px;">Mapple
+	<%= gmaps4rails(@json_map) %>
+	
+</div>
 
 <br />
 
