--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -46,7 +46,8 @@
   <div class="field">
     <%= f.label :chain_id %><br />
     <%= f.text_field :chain_id %>
-  </div>
+  </div>	<%= recaptcha_tags %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
