--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -2,3 +2,6 @@
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->    
 	<%= stylesheet_link_tag 'https://dl.dropbox.com/s/3zfeo6szta26z1u/custom.css', :media => 'screen' %>
+	<%= javascript_include_tag :defaults %>
+		<%= javascript_include_tag 'expander' %>
+		<%= javascript_include_tag 'custom' %>
