fully working minor styles

--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -1,7 +1,7 @@
 	<!--[if lt IE 9]>
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->    
+		<%= stylesheet_link_tag 'reset.css', :media => 'screen' %>
 	<%= stylesheet_link_tag 'https://dl.dropbox.com/s/3zfeo6szta26z1u/custom.css', :media => 'screen' %>
-	<%= javascript_include_tag :defaults %>
 		<%= javascript_include_tag 'expander' %>
 		<%= javascript_include_tag 'custom' %>
