--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,29 +1,34 @@
-<% if user_signed_in? %>
-  <li>
-  <%= link_to('Logout', destroy_user_session_path, :method => 'delete') %>        
-  </li>
-<% else %>
-  <li>
-  <%= link_to('Login', new_user_session_path)  %>  
-  </li>
-<% end %>
-<h1>Listing restaurants</h1>
 
-<%= form_tag restaurants_path, :method => :get do %>
-  <p>
-    <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag "Search Near", :name => nil %>
-  </p>
-<% end %>
-
-
-<%= render 'list' %>
-
-<div style="width: 400px;">Mapple
-	<%= gmaps4rails(@json_map) %>
+<div id="content">
 	
+	<div id="front-map">
+		<%= gmaps4rails(@json_map) %>
+	</div>
+	
+	<div id="youdo">
+		<p>Here are some things you can do right now:</p>
+		<ol>
+			<li>Ask the waiting staff when you pay your bill if they get the tip/service charge</li>
+			<li>Add the restaurant here</li>
+			<li>Tell you MP that the law needs to change</li>
+		</ol>
+	</div>
+
+	<div id="restaurant-index">
+
+		<h1>Listing restaurants</h1>
+
+		<%= render 'search' %>
+
+		<%= render 'list' %>
+
+	</div>
+
+	<%= link_to 'Add Restaurant', new_restaurant_path, :id => 'add-restaurant', :class => 'round' %>
+	
+	<%= render 'login' %>
+
 </div>
 
-<br />
 
-<%= link_to 'New Restaurant', new_restaurant_path %>
+
